--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li><a href="about.html">AboutMe</a></li>
                     <li><a href="https://gitlab.com/ctflover" target="_blank"><img class="image" src='images/gitlab.png'
-                                alt='github'> GitHub</a> </li>
+                                alt='github'> Gitlab</a> </li>
                     <li><a href="https://www.linkedin.com/in/nakulupadhyay/"><img src='images/linkedin.png'
                                 alt='LINKEDIN' width='15' height='15'> Linkedin</a> </li>
                     <li><a href="https://app.hackthebox.com/users/1431541"><img class="image" src='images/htb.png'
